# grembedding

./: .gitignore  Makefile  README.md  after-dvc.sh  data.dvc  datasets_raw.dvc  dvc.yaml  gitignore_fix.ipynb  md5.parquet  mlruns.dvc  params.yaml  pyproject.toml  requirements.in  requirements.txt  requirements_stylometrix.txt
.dvc/: config
bash_scripts/: after-dvc.sh  run_grembedding.bat  run_grembedding.sh
config/: mlflow.py
data/: .gitignore  all_raw_datasets.dvc
draft_pipeline/: pipeline.ipynb  pipeline.py
erotic_scrapper/: .gitignore  README.txt  lol24.ipynb
imports_validator/: .gitignore  imports_validator.py  md5.parquet  md5.pickle
notebooks/: 5authors.ipynb  pan18pl.ipynb  prus_vs_sienkiewicz.ipynb  results.py  results_analysis.ipynb  spacy_cuda.ipynb  styl_literacki.ipynb  tweets.ipynb
params/: AffinityPropagation1.yaml  DBSCAN1.yaml  KMeans1.0.yaml  Kmeans1.yaml  LR1.yaml  LogisticRegression1.yaml  MLP1.yaml  MLP3.yaml  SVC1.yaml  SVC2.yaml
params_generator/: .gitignore  gen_params2.0.yaml  models.yaml  params_generator.ipynb  params_generator2.0.ipynb
results/: .gitignore  RpTweetsXS_LemmatizerSM_CountVectorizer5000_SVC_SVC1.json  RpTweetsXS_LemmatizerSM_TfidfVectorizer1000_SVC_SVC1.json  RpTweetsXS_LemmatizerSM_TfidfVectorizer5000_SVC_SVC1.json  RpTweetsXS_TweetNormalization_CountVectorizer1000_SVC_SVC1.json  RpTweetsXS_TweetNormalization_CountVectorizer5000_SVC_SVC1.json  RpTweetsXS_TweetNormalization_TfidfVectorizer1000_SVC_SVC1.json  RpTweetsXS_TweetNormalization_TfidfVectorizer5000_SVC_SVC1.json
scripts/: clean.py  evaluate.py  (+4 more)
(+179 files in other folders)
