[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "objects"
authors = [
    {name = "Michał Skrzypa", email = "254501@student.pwr.edu.pl"},
]
description = "My package description"
requires-python = ">=3.7"
dependencies = [
]
version = "1.0"
